--- a/metadata.yaml
+++ b/metadata.yaml
@@ -26,5 +26,6 @@ subjects:
 - !lcc 'PT'
 - !lcsh 'Kolb, Annette, 1870-1967'
 - !lcsh 'Authors, German -- Biography'
+- GITenberg
 title: Wege und Umwege
 url: http://www.gutenberg.org/ebooks/46204
